Añadido @Data de Lombok